--- a/ListyCity/app/src/main/res/layout/activity_main.xml
+++ b/ListyCity/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,13 @@
 
     <Button
         android:id="@+id/buttonAddCity"
-        android:text="Add City"
-        android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:text="Add City"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="10dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
         android:id="@+id/listviewCities"
